# benchmark

./: .gitattributes  .gitignore  Makefile  PROJECT_DOCUMENTATION.md  README.md  TODO.md  UNIVARIATE_MODELS_EXECUTION_GUIDE.md  check_beijing_values.py  custom_metrics.csv  examine_data.py  install.sh  monitor_models.sh  organize_multivariate.py  process_all_csv.py  process_multivariate_csv.py  pyproject.toml  pytest.ini  reorganize_univariate_datasets.py  requirements.txt  requirements_moirai.txt  requirements_toto.txt  restart_failed_models.sh  restart_remaining_failed.sh  run_all_univariate_models_cursor.sh  run_tests.py  setup.py  test_forecast_horizon.py  test_hyperparameter_grid.py  test_multivariate_lstm_compatibility.py  test_multivariate_svr_beijing,py  test_multivariate_svr_beijing.py  test_multivariate_theta_beijing.py  test_multivariate_xgboost_beijing.py  test_patient_sparse.py  test_plot.py  test_simple_forecast.yaml  test_single_folder.py  test_tensorboard_logging.py  ttm_requirements.txt  unified_metrics.csv  (+2 more)
benchmarking_pipeline/: __init__.py  _all_models_pipeline.py  cli.py  example_client_abstracted_hyperparameter_usage.py  hyperparameter_tuning.py  load_datasets.py  model_executor.py  run_all_models.py  run_benchmark.py  run_benchmark_chronos.py  run_benchmark_moirai.py  run_benchmark_tabPFN.py  run_benchmark_timesFM.py  run_benchmark_toto.py  run_benchmark_ttm.py
checkpoints/: epoch=0-step=285-v1.ckpt  epoch=0-step=285-v2.ckpt  epoch=0-step=285.ckpt  epoch=0-step=323-v1.ckpt  epoch=0-step=323-v2.ckpt  epoch=0-step=323.ckpt
foundation_model_notebooks/: TimesFM.ipynb  chronos.ipynb  lag-llama.ckpt  lagllama.ipynb  moirai.ipynb  moment.ipynb  tabpfn_ts.ipynb  timesfm.ipynb  toto.ipynb  ttm.ipynb
results/: ARIMA_australian_electricity_20250710-121932.json  ARIMA_australian_electricity_20250710-160807.json  ARIMA_australian_electricity_demand_20250728-083842.csv  ARIMA_australian_electricity_demand_20250728-105900.csv  ARIMA_australian_electricity_demand_20250728-113255.csv  ARIMA_australian_electricity_demand_20250728-113452.csv  ARIMA_borealis_20250728-115512.csv  CrostonClassic_australian_electricity_20250708-104201.json  (+55 more)
(+12907 files in other folders)
