[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarking_pipeline"
version = "1.0.0"
description = "Time Series Forecasting Benchmarking Pipeline"
authors = [{name = "SMLCRM Team"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.scripts]
run_benchmark = "benchmarking_pipeline.run_benchmark:main"

[tool.setuptools]
packages = ["benchmarking_pipeline"]

[tool.setuptools.package-dir]
benchmarking_pipeline = "benchmarking_pipeline"
