[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarking_pipeline"
version = "1.0.0"
description = "Time Series Forecasting Benchmarking Pipeline"
authors = [
    {name = "SMLCRM Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "tqdm>=4.64.0",
    "psutil>=5.8.0",
    "conda-merge>=0.1.5",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.scripts]
run_benchmark = "benchmarking_pipeline.run_benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["benchmarking_pipeline*"]

[tool.setuptools.package-data]
"benchmarking_pipeline" = ["**/*.yaml", "**/*.json", "**/*.txt", "**/*.md"]
